[package]
name = "wdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
toml = "0.5.9"
serde_derive = "1.0.137"
serde = "1.0.137"
libp2p = "0.44.0"
futures = "0.3.21"
async-std = { version = "1.11.0", features = ["attributes"] }
log = "0.4.0"
env_logger = "0.9.0"
kvdb-rocksdb = "0.15.2"
kvdb = "0.11.0"
trie-db = "0.23.1"
trie-root = "0.17.0"
hash-db = "0.15.2"
keccak-hasher = "0.15.3"
parity-scale-codec = "3.1.2"
tempfile = "3.3.0"
serde_cbor = "0.11.2"
serde_json = "1.0.81"
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
clap = { version = "3.1.18", features = ["derive"] }
actix-web = "4.0.1"
rust-crypto = "0.2"
rand = "0.8.5"
chrono = "0.4"
ethereum-types = "0.13.1"
ic-agent = "0.16.0"
simple_asn1 = "0.6.2"
candid = "0.7.14"
garcon = "0.2.3"